tests/compile-fail/transmute-pair-uninit.stderr
error: Undefined Behavior: using uninitialized data, but this operation requires initialized memory
  --> $DIR/transmute-pair-uninit.rs:LL:CC
   |
LL |     if v == 0 { println!("it is zero"); }
   |        ^^^^^^ using uninitialized data, but this operation requires initialized memory
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/transmute-pair-uninit.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

